downloads document after anonymyzing

--- a/anon.html
+++ b/anon.html
@@ -9,7 +9,7 @@
 <input id="uploadInput" type="file" name="myFiles" multiple>
 
 <div>
-    <H1>What To Delete</H1>
+    <H1>What To Keep</H1>
     <form id="cboxes">
 
     </form>
