--- a/anon.html
+++ b/anon.html
@@ -5,9 +5,14 @@
     <title>Anonymizes Given Data</title>
 </head>
 <body>
-<label for="uploadInput">Select a file:</label>
+<label for="uploadInput">Select a JSON file:</label>
 <input id="uploadInput" type="file" name="myFiles" multiple>
 
+<!--<form action="upload.php" method="post" enctype="multipart/form-data">-->
+<!--    <label for="phpFile">Select an SQL file:</label>-->
+<!--    <input id="phpFile" type="file" name="file">-->
+<!--    <input type="submit" value="">-->
+<!--</form>-->
 <div>
     <H1>What To Keep</H1>
     <form id="cboxes">
